# HolyCluster-server

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: holycluster.service
src/: .env.example  cleanup_database.py  cleanup_database.sh  db_classes.py  initiliaze_database.py  location.py  misc.py  orthodom.py  prefixes_list.csv  prefixes_list_with_dxcc.csv  prefixes_list_with_dxcc.csv.old  prefixes_to_locators.csv  qrz.py  run_collector.py  run_collector.sh  settings.py  spots_collector.py
src/api/: __main__.py  propagation.py  settings.py  submit_spot.py
tests/collector/: test_get_dxheat_spots.py  test_get_geo_cache_from_db.py  test_parse_dx_line.py  test_prepare_dxheat_record.py  test_prepare_holy_spots_records.py  test_telnet.py
tests/location/: test_get_orthodom.py  test_locator_to_coordinates.py  test_read_csv_to_list_of_tupples.py  test_resolve_country.py  test_resolve_locator.py
tests/qrz/: test_get_locator_from_qrz.py  test_get_qrz_callsign_info.py  test_qrz_get_session_key.py
