[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "holycluster-server"
version = "0.1.0"
dependencies = [
    "httpx==0.23.2",
    "loguru==0.7.2",
    "sqlalchemy==2.0.31",
    "environs==11.0.0",
    "psycopg2-binary==2.9.9",
    "asyncio==3.4.3",
    "aiohttp==3.10.5",
    "fastapi==0.115.5",
    "sqlmodel==0.0.19",
    "uvicorn==0.30.6",
]
